[gd_scene load_steps=16 format=3 uid="uid://y4pu0orv8ihn"]

[ext_resource type="Script" uid="uid://bkb3o2g6he7xo" path="res://scripts/CharContainer.gd" id="1_4lylc"]
[ext_resource type="Texture2D" uid="uid://llncv7o7fnvc" path="res://assets/characters/legacy/Turin.png" id="2_ccg7h"]
[ext_resource type="LabelSettings" uid="uid://5mg8308marm6" path="res://assets/fonts/orange_console_text.tres" id="3_nmj1l"]
[ext_resource type="Texture2D" uid="uid://bkkkd74vsqr0s" path="res://assets/effects/empty_frame.png" id="3_r8ea3"]
[ext_resource type="Texture2D" uid="uid://vq281dkbiuu7" path="res://assets/effects/cura.png" id="3_vb4go"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="4_3uvvt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bxgh4"]
atlas = ExtResource("3_r8ea3")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejf8v"]
atlas = ExtResource("3_vb4go")
region = Rect2(0, 0, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_70ugv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxgh4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejf8v")
}],
"loop": true,
"name": &"healing",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_yph3h"]
line_spacing = 12.45
font = ExtResource("4_3uvvt")
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lf0k"]
bg_color = Color(0.101961, 0.662745, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2b0s"]
bg_color = Color(1, 0.176471, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1ey5"]
bg_color = Color(0.054902, 0.333333, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egapv"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bl1on"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="MarginContainer" type="MarginContainer"]
offset_right = 1114.0
offset_bottom = 106.0
script = ExtResource("1_4lylc")

[node name="CharContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 72

[node name="CharPic" type="TextureRect" parent="CharContainer"]
layout_mode = 2
texture = ExtResource("2_ccg7h")
expand_mode = 3
stretch_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharContainer/CharPic"]
position = Vector2(41.5, 55)
scale = Vector2(0.234, 0.232)
sprite_frames = SubResource("SpriteFrames_70ugv")

[node name="CharInfo" type="VBoxContainer" parent="CharContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Name" type="Label" parent="CharContainer/CharInfo"]
layout_mode = 2
text = "Turin"
label_settings = ExtResource("3_nmj1l")

[node name="Level" type="Label" parent="CharContainer/CharInfo"]
layout_mode = 2
text = "Level 10
"
label_settings = SubResource("LabelSettings_yph3h")

[node name="Class" type="Label" parent="CharContainer"]
layout_mode = 2
text = "Classe"
label_settings = SubResource("LabelSettings_yph3h")

[node name="CharPv" type="VBoxContainer" parent="CharContainer"]
layout_mode = 2
alignment = 1

[node name="PvContainer" type="HBoxContainer" parent="CharContainer/CharPv"]
layout_mode = 2
theme_override_constants/separation = 116

[node name="Pv" type="Label" parent="CharContainer/CharPv/PvContainer"]
layout_mode = 2
text = "Pv
"
label_settings = SubResource("LabelSettings_yph3h")

[node name="PvNumber" type="Label" parent="CharContainer/CharPv/PvContainer"]
layout_mode = 2
text = "00/00
"
label_settings = SubResource("LabelSettings_yph3h")

[node name="PvBar" type="HBoxContainer" parent="CharContainer/CharPv"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GreenBar" type="Panel" parent="CharContainer/CharPv/PvBar"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_5lf0k")

[node name="RedBar" type="Panel" parent="CharContainer/CharPv/PvBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u2b0s")

[node name="CharPp" type="VBoxContainer" parent="CharContainer"]
layout_mode = 2
alignment = 1

[node name="PpContainer" type="HBoxContainer" parent="CharContainer/CharPp"]
layout_mode = 2
theme_override_constants/separation = 116
alignment = 1

[node name="Pp" type="Label" parent="CharContainer/CharPp/PpContainer"]
layout_mode = 2
text = "Pp
"
label_settings = SubResource("LabelSettings_yph3h")

[node name="PpNumber" type="Label" parent="CharContainer/CharPp/PpContainer"]
layout_mode = 2
text = "00/00
"
label_settings = SubResource("LabelSettings_yph3h")

[node name="PpBar" type="HBoxContainer" parent="CharContainer/CharPp"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BlueBar" type="Panel" parent="CharContainer/CharPp/PpBar"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o1ey5")

[node name="RedBar" type="Panel" parent="CharContainer/CharPp/PpBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u2b0s")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(1114, 106)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_egapv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_egapv")
theme_override_styles/hover = SubResource("StyleBoxFlat_bl1on")
theme_override_styles/normal = SubResource("StyleBoxFlat_egapv")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
